[package]
name = "frogbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
matrix-sdk = {version = "0.6.2", features = ["anyhow", "e2e-encryption", "socks"]}
anyhow = "1.0.71"
clap = "4.2.7"
toml = "0.7.4"
log = "0.4.17"
env_logger = "0.10.0"
tokio = {version = "1.28.1", features = ["parking_lot", "rt-multi-thread", "macros"]}
serde = {version = "1.0.163", features = ["derive"]}
tracing-subscriber = "0.3.17"
scraper = "0.16.0"
reqwest = "0.11.18"
regex = "1"
lazy_static = "1.4.0"
