[package]
name = "frogbot"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
matrix-sdk = {version = "0.6.2", features = ["anyhow", "e2e-encryption", "socks"]}
anyhow = "1.0.75"
clap = "4.4.6"
toml = "0.8.2"
log = "0.4.20"
env_logger = "0.10.0"
tokio = {version = "1.32.0", features = ["parking_lot", "rt-multi-thread", "macros"]}
serde = {version = "1.0.188", features = ["derive"]}
tracing-subscriber = "0.3.17"
scraper = "0.17.1"
reqwest = "0.11.22"
regex = "1.9.6"
lazy_static = "1.4.0"
